integrate scheduling and fix some alignment issues (and merge with parallax fixes)

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -162,7 +162,7 @@
   opacity:0;
   filter:blur(5px);
   transform:translateX(-100%);
-  transition: all 4s;
+  transition: all 3s;
 }
 
 
@@ -171,17 +171,6 @@
   transform:translateX(0);
   opacity:1;
 }
-
-/* .fade {
-  opacity: 0;
-  filter: blur(5px);
-  transition: all 1s;
-} */
-
-/* .parallax {
-  height: 0;
-  overflow-y:hidden;
-} */
 
 @media(perfers-reduced-motion){
   .hidden {
